# github-org-mirror

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
github_org_mirror/: __init__.py  __main__.py  cli.py  config.py  sync.py  transfer.py  utils.py  watcher.py
tests/: __init__.py
